# Project-Koi

./: .gitignore  1k.json  AndroidManifest.xml  CMakeLists.txt  Makefile  README.md  a.out  imgui.ini  porsche.json
assets/meshes/: Porsche_911_GT2.mtl
assets/meshes/onethousandvoices/: OneThousandVoices02_Diffuse.dds  onethousandvoices.mtl
assets/shaders/: shader.frag  shader.vert
cpp/: 1K.txt  1k.json  Makefile  ProjectKoi.cpp  car.txt  compile_shaders.sh  cube.txt  imgui.ini  porsche.json  test.txt
cpp/camera/: CameraSystem.cpp  CameraSystem.h
cpp/console/: ConsoleSystem.cpp  ConsoleSystem.h
cpp/input/: InputSystem.cpp  InputSystem.h
cpp/renderer/: RenderSystem.cpp  RenderSystem.h
cpp/renderer/framework/: Context.cpp  GUI.cpp  RenderFramework.cpp  RenderFramework.h  Renderer.cpp  Scene3D.cpp
cpp/system/: MessageBus.cpp  SystemFramework.h
include/: CameraFramework.h  CameraSystem.h  ConsoleSystem.h  InputSystem.h  ProjectKoi.h  RenderFramework.h  RenderFramework.h.old  RenderSystem.h  SystemFramework.h
include/render/: Camera.h  Context.h  DesktopContext.h  DesktopRenderer.h  GUI.h  KoiVector.h  KoiVulkan.h  Model.h  OVRContext.h  OVRRenderer.h  Renderer.h  Scene.h  Scene3D.h  Utilities.h
include/system/: Log.h  Message.h  MessageBus.h  System.h
main/: CMakeLists.txt
main/assets/meshes/: coordinates.mtl  cube.mtl
main/assets/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
main/cpp/: Makefile  ProjectKoi.h  car.txt  test.txt
main/cpp/camera/: CameraSystem.cpp  CameraSystem.h
main/cpp/console/: ConsoleSystem.cpp
main/cpp/input/: InputSystem.cpp
main/cpp/renderer/: RenderSystem.cpp
main/cpp/renderer/framework/: Context.cpp  RenderFramework.cpp
main/cpp/system/: Log.h  SystemFramework.h
main/java/com/dmg/projectkoi/: MyNativeActivity.java
quest/: settings.gradle
quest/app/: build.gradle
quest/app/src/main/: AndroidManifest.xml  CMakeLists.txt
quest/app/src/main/java/com/dmg/projectkoi/: MyNativeActivity.java
src/: Camera.cpp  CameraSystem.cpp  ConsoleSystem.cpp  Context.cpp  DesktopContext.cpp  DesktopRenderer.cpp  GUI.cpp  InputSystem.cpp  Model.cpp  OVRContext.cpp  OVRRenderer.cpp  ProjectKoi.cpp  RenderFramework.cpp  RenderSystem.cpp  Renderer.cpp  Scene3D.cpp  System.cpp  Utilities.cpp
src/old/: ProjectKoi.cpp  RenderFramework.cpp  RenderSystem.cpp  Renderer.cpp
